# hyperliquid-lens

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  rust-toolchain.toml
backend/migrations/: 001_create_trades.sql  002_create_market_events.sql  003_add_event_source.sql  004_create_system_heartbeats.sql  005_create_regime_snapshots.sql  006_add_regime_context_to_events.sql
backend/src/: config.rs  main.rs
backend/src/alert/: mod.rs
backend/src/api/: routes.rs
backend/src/backfill/: mod.rs
backend/src/chart/: warmup.rs
backend/src/db/: events.rs  heartbeat.rs  mod.rs  regime.rs  trades.rs
backend/src/detection/: candle_builder.rs  cascade_detector.rs  interval_config.rs  mod.rs  outcome_tracker.rs  pipeline.rs  regime_classifier.rs  regime_engine.rs  sweep_detector.rs  swing_detector.rs  types.rs
backend/src/execution/: broker.rs  mod.rs
backend/src/hyperliquid/: info_client.rs  mod.rs
backend/src/ingester/: mod.rs  parser.rs  ws_client.rs
backend/src/risk/: engine.rs  types.rs
backend/src/setups/: engine.rs  types.rs
backend/src/signals/: engine.rs  types.rs
backend/src/trading/: mod.rs
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BackfillPanel.tsx  CandlestickChart.tsx  CoinSelector.tsx  EventFeed.tsx  StatsBar.tsx  TradeFeed.tsx
frontend/lib/: api.ts  ws.ts
scripts/: install-service.sh  start-daemon.sh  uninstall-service.sh
